--- a/main.html
+++ b/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-
+ 
 <html>
-
+ 
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+ 
 <body>
 	<!-- the entire body must be written by student -->
+	<section class="holder">
+		<div class="item-1">1</div>
+		
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
-
+ 
 </body>
-
+ 
 </html>
