--- a/main.html
+++ b/main.html
@@ -8,10 +8,9 @@
  
 <body>
 	<!-- the entire body must be written by student -->
-	<section class="holder">
-		<div class="item-1">1</div>
-		
-	</section>
+	<div class="holder">
+		<div class="item">item</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
  
